# OpenForensic

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  OpenForensic_console_log_2026-07-07T06-01-45-205Z.txt  README.md  SECURITY.md  mise.toml  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: CNAME  architecture-pruning-ponytail.md  enabling-analysis-suite-features.md  faq.html  hashes_guides.md  help.html  index.html  memory-dump.md  pgp_manifests.md  style.css  unified-case-architecture.md  volatility-rust-engine.md
docs/resources/: dependabot-security-assessment.md  enabling-analysis-suite-features.md  hashes_guides.md  pgp_manifests.md  unified-case-architecture.md  volatility-rust-engine.md
frontend/: index.html  main.js  style.css
frontend/web/: help.html  index.html  style.css
rules/: forensic_showcase.yar
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: analysis.json  default.json
src-tauri/src/: acquisition.rs  amcache.rs  anti_forensics.rs  browser_triage.rs  carver.rs  case_management.rs  checkpoint.rs  correlation.rs  disk_mount.rs  encryption.rs  error.rs  format.rs  hasher.rs  im_triage.rs  lib.rs  locked_files.rs  main.rs  memory.rs  mobile_triage.rs  network_forensics.rs  output.rs  prefetch.rs  ram_analysis.rs  report.rs  srum.rs  state.rs  timeline.rs  triage_db.rs  yara_scanner.rs
src-tauri/src/cli/: args.rs  (+2 more)
volatility/: Cargo.toml
volatility/src/: error.rs  lib.rs  main.rs  reader.rs
volatility/src/plugins/: cmdline.rs  crypto_keys.rs  filescan.rs  malfind.rs  mod.rs  netstat.rs  pslist.rs
(+17 files in other folders)
