[package]
name = "volatility"
version = "0.1.0"
edition = "2024"
description = "Native Rust memory forensics engine for OpenForensic"

[[bin]]
name = "volatility"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
md-5 = "0.10"
